--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
     City:
     <input type="text" id="cityName" />
     <button id="btn">Enter</button>
+
+    <!--COLOUMNS -->
+    <div id="dayAgenda" class="container">
+      <div class="row">
+        <div class="col-sm">One of three columns</div>
+        <div class="col-sm">One of three columns</div>
+        <div class="col-sm">One of three columns</div>
+      </div>
+    </div>
+
+    <!--LINKS TO JQUERY, JS ETC-->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
