--- a/index.html
+++ b/index.html
@@ -15,18 +15,79 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 id="main-header">WEATHER APP</h1>
+    <h1 id="main-header">WEATHER DASHBOARD</h1>
     <!-- search fx - text box & enter buttton -->
     City:
     <input type="text" id="cityName" />
     <button id="btn">Enter</button>
 
-    <!--COLOUMNS -->
+    <!--MAIN DAY HEADER -->
+    <div
+      id="main-day"
+      class="card border-primary mb-3 d-flex justify-content-center"
+      style="max-width: 75%"
+    >
+      <div class="card-header">Header</div>
+      <div class="card-body text-primary">
+        <h5 class="card-title">Primary card title</h5>
+        <p class="card-text">
+          Some quick example text to build on the card title and make up the
+          bulk of the card's content.
+        </p>
+      </div>
+    </div>
+
+    <!--5 DAY COLUMNS-->
     <div id="dayAgenda" class="container">
-      <div class="row">
-        <div class="col-sm">One of three columns</div>
-        <div class="col-sm">One of three columns</div>
-        <div class="col-sm">One of three columns</div>
+      <div class="card text-white bg-info mb-3" style="max-width: 18rem">
+        <div class="card-header">Header</div>
+        <div class="card-body">
+          <h5 class="card-title">Info card title</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+        </div>
+      </div>
+      <div class="card text-white bg-info mb-3" style="max-width: 18rem">
+        <div class="card-header">Header</div>
+        <div class="card-body">
+          <h5 class="card-title">Info card title</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+        </div>
+      </div>
+      <div class="card text-white bg-info mb-3" style="max-width: 18rem">
+        <div class="card-header">Header</div>
+        <div class="card-body">
+          <h5 class="card-title">Info card title</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+        </div>
+      </div>
+      <div class="card text-white bg-info mb-3" style="max-width: 18rem">
+        <div class="card-header">Header</div>
+        <div class="card-body">
+          <h5 class="card-title">Info card title</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+        </div>
+      </div>
+      <div class="card text-white bg-info mb-3" style="max-width: 18rem">
+        <div class="card-header">Header</div>
+        <div class="card-body">
+          <h5 class="card-title">Info card title</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+        </div>
       </div>
     </div>
 
