--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@
     <h1 id="main-header">WEATHER DASHBOARD</h1>
     <!-- search fx - text box & enter buttton -->
     City:
-    <input type="text" id="cityName" />
+    <input type="text" id="cityName" placeholder="Enter City" />
     <button id="btn">Enter</button>
 
     <!--MAIN DAY HEADER -->
     <div
       id="main-day"
       class="card border-primary mb-3 d-flex justify-content-center"
-      style="max-width: 75%"
-    >
+      style="max-width: 75%">
       <div class="card-header">Header</div>
       <div class="card-body text-primary">
         <h5 class="card-title">Primary card title</h5>
@@ -38,58 +37,19 @@
     </div>
 
     <!--5 DAY COLUMNS-->
-    <div id="dayAgenda" class="container">
-      <div class="card text-white bg-info mb-3" style="max-width: 18rem">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Info card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-        </div>
+    <div class="row d-none" id="fiveday-header">
+      <div class="col-12">
+          <h3>5-Day Forecast</h3>
       </div>
-      <div class="card text-white bg-info mb-3" style="max-width: 18rem">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Info card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-        </div>
-      </div>
-      <div class="card text-white bg-info mb-3" style="max-width: 18rem">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Info card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-        </div>
-      </div>
-      <div class="card text-white bg-info mb-3" style="max-width: 18rem">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Info card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-        </div>
-      </div>
-      <div class="card text-white bg-info mb-3" style="max-width: 18rem">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Info card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-        </div>
-      </div>
-    </div>
+  </div>
+  <div class="row">
+      <div class="col-md-2 forecast bg-secondary text-white m-2 rounded"></div>
+      <div class="col-md-2 forecast bg-secondary text-white m-2 rounded"></div>
+      <div class="col-md-2 forecast bg-secondary text-white m-2 rounded"></div>
+      <div class="col-md-2 forecast bg-secondary text-white m-2 rounded"></div>
+      <div class="col-md-2 forecast bg-secondary text-white m-2 rounded"></div>
+  </div>
+</div>
 
     <!--LINKS TO JQUERY, JS ETC-->
     <script
