adding gradient background color

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
   </head>
   <body>
     <h1 id="main-header">WEATHER DASHBOARD</h1>
-    <!-- search fx - text box & enter buttton -->
+   
+    <!-- SEARCH FX TEXT BOX & ENTER BTN -->
     City:
     <input type="text" id="cityName" placeholder="Enter City" />
     <button id="btn">Enter</button>
 
-    <!--MAIN DAY HEADER -->
-    <div id="main-day"class="card border-primary mb-3 d-flex justify-content-center" style="max-width: 75%">
+    <!--CURRENT DAY HEADER -->
+    <div id="currentWeather"class="card border-primary mb-3 d-flex justify-content-center" style="max-width: 75%">
       <div class="card-header d-flex justify-content-center"><h4>Today's Weather</h4></div>
       <div class="card-body text-primary">
         <p id="tempurature"></p>
