--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     <!--5 DAY COLUMNS-->
   </div>
   <div id="forecast" class="row">
-      <div class="col-md-2 forecast bg-secondary text-white m-2 rounded"></div>
-      <div class="col-md-2 forecast bg-secondary text-white m-2 rounded"></div>
-      <div class="col-md-2 forecast bg-secondary text-white m-2 rounded"></div>
-      <div class="col-md-2 forecast bg-secondary text-white m-2 rounded"></div>
-      <div class="col-md-2 forecast bg-secondary text-white m-2 rounded"></div>
+      <div class="col-md-2 forecast text-white m-2 rounded"></div>
+      <div class="col-md-2 forecast text-white m-2 rounded"></div>
+      <div class="col-md-2 forecast text-white m-2 rounded"></div>
+      <div class="col-md-2 forecast text-white m-2 rounded"></div>
+      <div class="col-md-2 forecast text-white m-2 rounded"></div>
   </div>
 </div>
 
