--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
     <div id="currentWeather" class="card border-primary d-flex justify-content-center mx-auto" style="max-width: 75%">
       <div class="card-header d-flex justify-content-center"><h4>Today's Weather</h4></div>
-      <div class="card-body text-primary d-flex mx-auto">
+      <div class="card-body text-primary">
         <p id="tempurature"></p>
         <p id="wind"></p>
         <p id="humidity"></p>
