local storage edit

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
   </div>
 </div>
 
+<!--USER HISTORY-->
+<div id="userHistory"></div>
+
+
     <!--LINKS TO JQUERY, JS ETC-->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
